// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoardSquare /> renders black tile when not validated in any direction 1`] = `
<Box
  height="25px"
  opacity={1}
  width="25px"
>
  <Tile
    boardLocation={
      {
        "x": 0,
        "y": 0,
      }
    }
    color="black"
    tile={
      {
        "id": "A1",
        "letter": "A",
      }
    }
  />
</Box>
`;

exports[`<BoardSquare /> renders green tile when valid in every direction 1`] = `
<Box
  height="25px"
  opacity={1}
  width="25px"
>
  <Tile
    boardLocation={
      {
        "x": 0,
        "y": 0,
      }
    }
    color="green.500"
    tile={
      {
        "id": "A1",
        "letter": "A",
      }
    }
  />
</Box>
`;

exports[`<BoardSquare /> renders properly when is over and can drop 1`] = `
<Box
  backgroundColor="green.400"
  color="green.400"
  height="25px"
  opacity={0.5}
  width="25px"
/>
`;

exports[`<BoardSquare /> renders properly with null boardSquare 1`] = `
<Box
  height="25px"
  opacity={1}
  width="25px"
/>
`;

exports[`<BoardSquare /> renders red tile when invalid in any direction 1`] = `
<Box
  height="25px"
  opacity={1}
  width="25px"
>
  <Tile
    boardLocation={
      {
        "x": 0,
        "y": 0,
      }
    }
    color="red.600"
    tile={
      {
        "id": "A1",
        "letter": "A",
      }
    }
  />
</Box>
`;
